<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_details_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adam.camerawithsaveapi24.UserDetailsActivity">

    <TextView
        android:id="@+id/udl_tv1"
...
        android:layout_marginTop="4dp"
        android:text="Gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edl_goal_weight_et" />

    <TextView
        android:id="@+id/edl_username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="username's details"
...
